Se crearon las apis para la creación y modificación de grupos.

--- a/backend/assets/front_end/index.html
+++ b/backend/assets/front_end/index.html
@@ -291,17 +291,17 @@
       font-family: Roboto, Helvetica Neue, sans-serif;
     }
   </style>
-  <link rel="stylesheet" href="{% static 'front_end/styles.css' %}" media="print" onload="this.media='all'"><noscript>
-    <link rel="stylesheet" href="{% static 'front_end/styles.css' %}">
+  <link rel="stylesheet" href="{% static 'front_end/styles.a316b13cb9b8a9e39acd.css' %}" media="print" onload="this.media='all'"><noscript>
+    <link rel="stylesheet" href="{% static 'front_end/styles.a316b13cb9b8a9e39acd.css' %}">
   </noscript>
 </head>
 
 <body class="mat-typography">
   <app-root></app-root>
-  <script src="{% static 'front_end/runtime.js' %}" defer></script>
-  <script src="{% static 'front_end/polyfills.js' %}" defer></script>
-  <script src="{% static 'front_end/scripts.js' %}" defer></script>
-  <script src="{% static 'front_end/main.js' %}" defer></script>
+  <script src="{% static 'front_end/runtime.a26b6106bcfb5df5a98e.js' %}" defer></script>
+  <script src="{% static 'front_end/polyfills.c4448d322b42a5d74c70.js' %}" defer></script>
+  <script src="{% static 'front_end/scripts.6adb0a968ee3fff6839b.js' %}" defer></script>
+  <script src="{% static 'front_end/main.49329a0815b3eb521f41.js' %}" defer></script>
 
 </body>
 
